# ml-trading-strategies

./: .gitignore  LEARNING_PATH.md  README.md  pyproject.toml  requirements.txt  util.py
Reports/: README.md  ReportFormats.url  pyproject.toml
assess_learners/: BagLearner.py  DTLearner.py  InsaneLearner.py  LinRegLearner.py  README.md  RTLearner.py  grade_learners.py  pyproject.toml  testlearner.py
assess_learners/tests/: __init__.py  grade_learners.py  testlearner.py
defeat_learners/: DTLearner.py  LinRegLearner.py  README.md  gen_data.py  grade_best4.py  pyproject.toml  testbest4.py
defeat_learners/tests/: __init__.py  grade_best4.py  testbest4.py
grading/: README.md  pyproject.toml
indicator_evaluation/: README.md  TheoreticallyOptimalStrategy.py  indicators.py  marketsimcode.py  p6_Table.txt  pyproject.toml  testproject.py  util.py
indicator_evaluation/tests/: __init__.py  test_indicator_project.py
marketsim/: README.md  grade_marketsim.py  marketsim.py  pyproject.toml
marketsim/tests/: __init__.py  grade_marketsim.py
martingale/: README.md  martingale.py  p1_martingale_report.docx  p1_results.txt  pyproject.toml
optimize_something/: README.md  grade_optimization.py  optimization.py  pyproject.toml
optimize_something/tests/: __init__.py  grade_optimization.py
qlearning_robot/: QLearner.py  README.md  grade_robot_qlearning.py  pyproject.toml  testqlearner.py
qlearning_robot/tests/: __init__.py  grade_robot_qlearning.py  testqlearner.py
strategy_evaluation/: 0.005_impact.txt  0.01_impact.txt  0.055_impact.txt  0.0_impact.txt  0.11_impact.txt  0_impact.txt  BagLearner.py  ManualStrategy.py  README.md  RTLearner.py  StrategyLearner.py  experiment1.py  experiment2.py  grade_strategy_learner.py  in_sample_stats.txt  indicators.py  marketsimcode.py  pyproject.toml  testproject.py
strategy_evaluation/tests/: __init__.py  grade_strategy_learner.py  test_strategy_project.py
system_tests/: README.md  grading.py  pyproject.toml
