[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-assess-learners"
version = "0.1.0"
description = "From-scratch learner benchmarking: decision trees, random trees, bagging, and baselines."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6"
]
