[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-defeat-learners"
version = "0.1.0"
description = "Synthetic dataset generation to expose strengths and weaknesses of different learners."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23"
]
