[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-indicator-evaluation"
version = "0.1.0"
description = "Technical indicator engineering and theoretically optimal strategy evaluation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6"
]
