[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-marketsim"
version = "0.1.0"
description = "Order-driven portfolio value simulator with commission and market impact."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5"
]
