[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-portfolio-optimization"
version = "0.1.0"
description = "Constrained allocation optimization for maximum Sharpe ratio portfolios."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "scipy>=1.10"
]
