[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-qlearning-robot"
version = "0.1.0"
description = "Tabular Q-Learning and Dyna-Q for sequential decision-making tasks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23"
]
