[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-strategy-evaluation"
version = "0.1.0"
description = "Manual-vs-ML trading strategy evaluation with backtesting and impact analysis."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6"
]
