[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4t-system-test-utils"
version = "0.1.0"
description = "Shared system-test and validation utility code for ML projects."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
